Included basic CSS and bootstrap

--- a/index.html
+++ b/index.html
@@ -1,17 +1,32 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Esparza Pest Control</title>
-
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Esparza Pest Control</title>		
+		<!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+		<!-- Optional: Include the jQuery library -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<!-- Optional: Incorporate the Bootstrap JavaScript plugins -->
+		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
-		<div id="page-wrap">
+		<div class="container">
 			<header>
 				<div id="header-contact-details">
 				</div>
 				<div id="header-logo">
 				</div>
 				<nav>
+					<ul>
+						<li><a href="#">Termite control</a></li>
+						<li><a href="#">Pest control</a></li>
+						<li><a href="#">Residential</a></li>
+						<li><a href="#">Commercial</a></li>
+						<li><a href="#">Articles</a></li>
+					</ul>
 				</nav>
 			</header>
 			<div id="main-content">
