First version with bootstrap responsive

--- a/index.html
+++ b/index.html
@@ -2,79 +2,106 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Esparza Pest Control</title>		
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-		<!-- Optional: Include the jQuery library -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-		<!-- Optional: Incorporate the Bootstrap JavaScript plugins -->
-		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-		<link rel="stylesheet" href="css/style.css" />
+		<!-- Bootstrap -->
+    	<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+		<link href="css/bootstrap-responsive.css" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body>
-		<div class="container">
-			<header>
-				<div id="header-contact-details">
-				</div>
-				<div id="header-logo">
-				</div>
-				<nav>
-					<ul>
-						<li><a href="#">Termite control</a></li>
-						<li><a href="#">Pest control</a></li>
-						<li><a href="#">Residential</a></li>
-						<li><a href="#">Commercial</a></li>
-						<li><a href="#">Articles</a></li>
-					</ul>
-				</nav>
-			</header>
-			<div id="main-content">
-				<aside>
-					<nav>
-						<ul>
-							<li><a href="#">Pests</a></li>
-							<li><a href="#">Bats</a></li>
-							<li><a href="#">Bed Bugs</a></li>
-							<li><a href="#">Rodents</a></li>
-							<li><a href="#">Ants</a></li>
-							<li><a href="#">Mosquito</a></li>
-							<li><a href="#">Birds</a></li>
-							<li><a href="#">Tent Fumigation</a></li>
-							<li><a href="#">Lawn</a></li>
-							<li><a href="#">Commercial</a></li>
-							<li><a href="#">WDI Reports</a></li>
-						</ul>
-					</nav>
-				</aside>
-				<section>
-					<h2>Got a Bug Problem?</h2>
-					<p>
-						Let Esparza Pest Control help rid your home and business of pesky rats
-and mice for good!
-No home is safe with rats or mice around. The scary truth is that rodents
-are a critical concern for homes and businesses – they cause billions of
-dollars in damages and huge loss of food every year. Besides just eating
-our food they spoil it by contaminating it with their feces, urine, or fur.
-Esparza Pest Control are your rodent pest control experts. Our
-professionals are trained to identify entry points, seal them off and trap
-the rats, making sure those rodents do not return! Don’t let rats turn your
-home into their breeding ground.
-					<p>
-					<blockquote>
-						Call the McAllen rodent control company of Esparza Pest Control at 956-887-1237 for more information.
-					</blockquote>
-				</section>
-			</div>
-			<div id="featured-services">
+		<div class="top-header">
+			<div class="container">
 				<ul>
-					<li><img src="freeTermiteInspection.png" /></li>
-					<li><img src="basf.png" /></li>
-					<li><img src="wdiReport.png" /></li>
+					<li>5602 S. Sugar Rd., Edinburg, TX 78539</li>
+					<li>Call now for FREE consultation (956) 887-1237</li>
 				</ul>
 			</div>
-			<footer>
-				<div id="footer-copyright">
+      	</div><!-- footer -->
+		<div class="container">
+			<div class="masthead">
+		        <h3 class="muted">Esparza PC</h3>
+		        <div class="navbar">
+		        	<div class="navbar-inner">
+		         		<div class="container">
+		        			<ul class="nav">
+				                <li class="active"><a href="#">Home</a></li>
+				                <li><a href="#">Termite control</a></li>
+								<li><a href="#">Pest control</a></li>
+								<li><a href="#">Residential</a></li>
+								<li><a href="#">Commercial</a></li>
+								<li><a href="#">Articles</a></li>
+		              		</ul>
+		            	</div>
+		          	</div>
+		        </div><!-- /.navbar -->
+		    </div><!-- /.masthead -->
+		    <!-- Jumbotron -->
+		    <div class="row-fluid" style="margin-bottom: 0">
+			    <div class="span8">
+			    	<div class="jumbotron">
+					    <h1>Marketing stuff!</h1>
+					    <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+					    <a class="btn btn-large btn-success" href="#">Get started today</a>
+					</div>
+			    </div>
+			    <div class="span4">
+			    	<form class="contact-home">
+			    		<h2>Schedule service now</h2>
+			    	</form>
+			    </div>
+			</div>
+		    <hr />
+			<div class="row-fluid">
+        		<div class="span3">
+          			<div class="well sidebar-nav">
+	            		<ul class="nav nav-list">
+			              <li class="nav-header">Sidebar</li>
+			              <li class="active"><a href="#">Pests</a></li>
+			              <li><a href="#">Bats</a></li>
+			              <li><a href="#">Beg Bugs</a></li>
+			              <li><a href="#">Rodents</a></li>
+			              <li class="nav-header">Sidebar</li>
+			              <li><a href="#">Ants</a></li>
+			              <li><a href="#">Mosquitoes</a></li>
+			              <li><a href="#">Birds</a></li>
+			              <li><a href="#">Tent fumigation</a></li>
+			              <li><a href="#">Lawn</a></li>
+			              <li><a href="#">Commercial</a></li>
+			              <li><a href="#">WDI Reports</a></li>
+	            		</ul>
+          			</div><!--/.well -->
+        		</div><!--/span-->
+        		<div class="span9">
+			        <div class="hero-unit">
+				        <h1>Got a Bug problem?</h1>
+				        <p><strong>Esparza Pest Control</strong>, McAllen’s number one extermination team, has your pest control needs in mind. We are determined to rid your home and business of pests and rodents for good. We are professionals in terminating all types of rodents and pests posing danger to your home, family, and business.  These pests are definitely not something you want to live with and are a great menace to your everyday life. Diseases are sometimes carried by these pests and can cause damage to your health and home. Your property and investments can also become subject to these dangers.  Our McAllen staff at Esparza Pest Control is well trained and can get rid of this problem safely and in a timely and clean manner.</p>
+				        <!--<p><a href="#" class="btn btn-primary btn-large">Learn more &raquo;</a></p>-->
+			        </div>
+		        	
+        		</div><!--/span9-->
+      		</div><!--/row-->
+      		<div class="row-fluid">
+        		<div class="span4">
+	        		<h2>Heading</h2>
+	        		<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+	        		<p><a class="btn" href="#">View details &raquo;</a></p>
+        		</div><!--/span-->
+        		<div class="span4">
+			        <h2>Heading</h2>
+			        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+			        <p><a class="btn" href="#">View details &raquo;</a></p>
+		        </div><!--/span-->
+        		<div class="span4">
+			        <h2>Heading</h2>
+			        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+			        <p><a class="btn" href="#">View details &raquo;</a></p>
+        		</div><!--/span-->
+        	</div><!--/row-fluid-->				
+		</div><!-- container -->
+		<div class="footer">
+			<div class="container">
+        		<div id="footer-copyright">
 					&copy;2014 Esparza Pest Control. Powered by Shaddai Solutions.
 				</div>
 				<div id="footer-social-bookmarks">
@@ -84,7 +111,9 @@ home into their breeding ground.
 						<li><img src="wdiReport.png" /></li>
 					</ul>
 				</div>
-			</footer>
-		</div>
+			</div>
+      	</div><!-- footer -->
+		<script src="http://code.jquery.com/jquery.js"></script>
+    	<script src="js/bootstrap.min.js"></script>
 	</body>
 </html>
