Pre Final version of homepage HTML

--- a/index.html
+++ b/index.html
@@ -12,15 +12,29 @@
 	<body>
 		<div class="top-header">
 			<div class="container">
-				<ul>
-					<li>5602 S. Sugar Rd., Edinburg, TX 78539</li>
-					<li>Call now for FREE consultation (956) 887-1237</li>
-				</ul>
+				<span class="pull-right"><a href="#">Login</a></span>
 			</div>
-      	</div><!-- footer -->
+      	</div><!-- top-header -->
+      	<div class="masthead">
+	      	<div class="container">
+	        	<div class="navbar-header">
+	          		<img src="img/main-logo-esparza.png" alt="Esparza Pest Control" title="Esparza Pest Control" />
+	        	</div>
+	        	<div class="pull-right">
+	          		<ul class="list-inline masthead-contactinfo">
+						<li>
+							<address>
+								5602 S. Sugar Rd.,<br />
+								Edinburg, TX 78539	
+							</address>
+						</li>
+						<li><adress>Call now for FREE consultation<br /> (956) 887-1237</address></li>
+					</ul>
+	        	</div><!-- pull-right -->
+	      	</div><!-- container -->
+      	</div><!-- masthead -->
 		<div class="container">
-			<div class="masthead">
-		        <h3 class="muted">Esparza PC</h3>
+			
 		        <nav class="navbar navbar-default" role="navigation">
 				  <div class="container-fluid">
 				    <!-- Brand and toggle get grouped for better mobile display -->
@@ -46,14 +60,16 @@
 				    </div><!-- /.navbar-collapse -->
 				  </div><!-- /.container-fluid -->
 				</nav>
-		    </div><!-- /.masthead -->
 		    <!-- Jumbotron -->
 		    <div class="row-fluid" style="margin-bottom: 0">
 			    <div class="span8">
 			    	<div class="jumbotron">
-					    <h1>Marketing stuff!</h1>
+			    		<div style="background: url(img/banner-header.jpg); width: 727px; height: 373px; margin: -50px 0 0 -50px;">
+			    				&nbsp;
+			    		</div>
+					    <!-- <h1>Marketing stuff!</h1>
 					    <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-					    <a class="btn btn-large btn-success" href="#">Get started today</a>
+					    <a class="btn btn-large btn-success" href="#">Get started today</a>-->
 					</div>
 			    </div>
 			    <div class="span4">
@@ -141,9 +157,11 @@
           			</div><!--/.well -->
         		</div><!--/span-->
         		<div class="span9">
-			        <div class="hero-unit">
+			        <div class="container-fluid main-content">
 				        <h1>Got a Bug problem?</h1>
 				        <p><strong>Esparza Pest Control</strong>, McAllen’s number one extermination team, has your pest control needs in mind. We are determined to rid your home and business of pests and rodents for good. We are professionals in terminating all types of rodents and pests posing danger to your home, family, and business.  These pests are definitely not something you want to live with and are a great menace to your everyday life. Diseases are sometimes carried by these pests and can cause damage to your health and home. Your property and investments can also become subject to these dangers.  Our McAllen staff at Esparza Pest Control is well trained and can get rid of this problem safely and in a timely and clean manner.</p>
+				        <p>Our team of educated McAllen exterminators at Esparza Pest Control concentrates on ridding your property of a range of pest problems.  We focus on the minor and major problems concerning pests and rodents and supply services that you won’t find at other pest control groups. We snuff out some of the most common pest problems related to cockroaches, crickets, ticks, earwigs, fleas, spiders, and silverfish.</p>
+				        <p>Esparza Pest Control in McAllen uses the most innovative technology in pest extermination.  We focus on ridding your home, lawn, or business of these pests and break the lifecycle of pests to keep them from coming back.  McAllen’s team of trusted and skilled exterminators at Esparza Pest Control will provide you with on the best pest control and lawn services.  We offer regular maintenance programs as well as one-time treatments.</p>
 				        <!--<p><a href="#" class="btn btn-primary btn-large">Learn more &raquo;</a></p>-->
 			        </div>
 		        	
@@ -151,19 +169,13 @@
       		</div><!--/row-->
       		<div class="row-fluid">
         		<div class="span4">
-	        		<h2>Heading</h2>
-	        		<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-	        		<p><a class="btn" href="#">View details &raquo;</a></p>
+	        		<img src="img/banner-free-termite-inspect.jpg" /><br />&nbsp;
         		</div><!--/span-->
         		<div class="span4">
-			        <h2>Heading</h2>
-			        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-			        <p><a class="btn" href="#">View details &raquo;</a></p>
+			        <img src="img/banner-basf.jpg" /><br />&nbsp;
 		        </div><!--/span-->
         		<div class="span4">
-			        <h2>Heading</h2>
-			        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-			        <p><a class="btn" href="#">View details &raquo;</a></p>
+			        <img src="img/banner-wdi-report.jpg" /><br />&nbsp;
         		</div><!--/span-->
         	</div><!--/row-fluid-->				
 		</div><!-- container -->
@@ -173,10 +185,11 @@
 					&copy;2014 Esparza Pest Control. Powered by Shaddai Solutions.
 				</div>
 				<div id="footer-social-bookmarks">
-					<ul>
-						<li><img src="freeTermiteInspection.png" /></li>
-						<li><img src="basf.png" /></li>
-						<li><img src="wdiReport.png" /></li>
+					<ul class="list-inline pull-right">
+						<li><img src="img/facebook_circle_color-48.png" /></li>
+						<li><img src="img/google_circle_color-48.png" /></li>
+						<li><img src="img/youtube_circle_color-48.png" /></li>
+						<li><img src="img/twitter_circle_color-48.png" /></li>
 					</ul>
 				</div>
 			</div>
