--- a/inner.html
+++ b/inner.html
@@ -7,7 +7,7 @@
 		<!-- Bootstrap -->
     	<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
 		<link href="css/bootstrap-responsive.css" rel="stylesheet">
-		<link href="css/style.css" rel="stylesheet">
+		<link href="style.css" rel="stylesheet">
 	</head>
 	<body>
 		<div class="top-header">
@@ -18,7 +18,7 @@
       	<div class="masthead">
 	      	<div class="container">
 	        	<div class="navbar-header">
-	          		<img src="img/main-logo-esparza.png" alt="Esparza Pest Control" title="Esparza Pest Control" />
+	          		<img src="img/main-logo-esparza.png" alt="Esparza Pest Control" title="Esparza Pest Control" style="max-width: 373px; width: 90%; height: auto; margin: 0" />
 	        	</div>
 	        	<div class="pull-right">
 	          		<ul class="list-inline masthead-contactinfo">
